--- a/package.json
+++ b/package.json
@@ -11,28 +11,22 @@
     "@mui/styled-engine-sc": "^5.14.10",
     "@mui/x-date-pickers": "^6.16.2",
     "@mui/x-date-pickers-pro": "^6.16.2",
-    "@reduxjs/toolkit": "^1.9.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
-    "bootstrap": "^5.3.2",
     "date-fns": "^2.30.0",
     "formik": "^2.4.5",
     "jss-rtl": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.47.0",
     "react-number-format": "^5.3.1",
-    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.1",
     "styled-components": "^5.3.11",
     "stylis": "^4.3.0",
     "stylis-plugin-rtl": "^2.1.1",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.2.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -57,8 +51,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@hookform/devtools": "^4.3.1"
   }
 }
